# OpenVoice

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QA.md  README.md  README_RTX_5090_setup.md  RTX_5090_setup.sh  api.py  attentions.py  cog.yaml  commons.py  demo.py  demo_mps.ipynb  demo_part1.ipynb  demo_part2.ipynb  demo_part3.ipynb  demo_part3.py  entrypoint.sh  mel_processing.py  models.py  modules.py  nvidia_resource_monitor.sh  openvoice_app.py  playaudio.py  predict.py  pyproject.toml  requirements.txt  se_extractor.py  setup.py  tts.py  utils.py  watcher.py  เสียงพี่ซิ้ม
docs/: DF_USAGE.md  DockerFile  Dockerfile  QA.md  USAGE.md  USAGE_WINDOWS.md
env/: pyvenv.cfg
env/Scripts/: Activate.ps1  activate  activate.bat
openvoice/: api.py  attentions.py  commons.py  mel_processing.py  models.py  modules.py  openvoice_app.py  se_extractor.py  utils.py
openvoice/text/: __init__.py  cleaners.py  english.py  mandarin.py
text/: __init__.py  cleaners.py  symbols.py
