[project]
name = "openvoice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuya Fujiwara", email = "y.fujiwara@petapa.jp" }
]
dependencies = [
    "librosa>=0.10.1",
    "faster-whisper>=0.10.0",
    "pydub>=0.25.1",
    "wavmark>=0.0.3",
    "numpy>=1.24.4",
    "eng_to_ipa>=0.0.2",
    "inflect>=7.0.0",
    "unidecode>=1.3.8",
    "openai>=1.7.2",
    "python-dotenv>=1.0.0",
    "pypinyin>=0.50.0",
    "cn2an>=0.5.22",
    "jieba>=0.42.1",
    "gradio>=4.14.0",
    "langid>=1.1.6",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
